<?php

namespace App\Models;

use Illuminate\Contracts\Auth\MustVerifyEmail;
use Illuminate\Database\Eloquent\Factories\HasFactory;
use Illuminate\Foundation\Auth\User as Authenticatable;
use Illuminate\Notifications\Notifiable;
use Laravel\Fortify\TwoFactorAuthenticatable;
use Laravel\Jetstream\HasProfilePhoto;
use Laravel\Jetstream\HasTeams;
use Laravel\Sanctum\HasApiTokens;
use App\Traits\UserProfilePhoto;

class User extends Authenticatable
{
    use HasApiTokens;
    use HasFactory;
    use UserProfilePhoto;
    use HasTeams;
    use Notifiable;
    use TwoFactorAuthenticatable;

    /**
     * The attributes that are mass assignable.
     *
     * @var array<int, string>
     */
    protected $fillable = [
        'name', 'email', 'password',
    ];

    /**
     * The attributes that should be hidden for serialization.
     *
     * @var array<int, string>
     */
    protected $hidden = [
        'password',
        'remember_token',
        'two_factor_recovery_codes',
        'two_factor_secret',
    ];

    /**
     * The attributes that should be cast.
     *
     * @var array<string, string>
     */
    protected $casts = [
        'email_verified_at' => 'datetime',
    ];

    /**
     * The accessors to append to the model's array form.
     *
     * @var array<int, string>
     */
    protected $appends = [
        'profile_photo_url', 'links'
    ];

    /**
     * 関連付けられているlink
     *
     * @return string|null
     */
    public function getLinksAttribute()
    {
        return $this->links()->get();
    }

    //
    public function like_events()
    {
        return $this->belongsToMany(Event::class, 'event_user_like');
    }

    // GroupModel が複数のイベントを主催している場合
    public function good_events()
    {
        return $this->belongsToMany(Event::class, 'event_user_good');
    }

    /**
     * このUserのイベントオーガナイザー取得
     */
    public function event_organizers()
    {
        return $this->morphMany(EventOrganizer::class, 'event_organizeble');
    }

    //リンク
    public function links()
    {
        return $this->morphMany(Link::class, 'linkable');
    }

    //フォロー機能 Userがフォローしている人
    public function follows()
    {
        return $this->morphToMany(User::class, 'followable', 'follows', 'user_id', 'followable_id');
    }

    //フォロー機能 Userをfollowしている人
    public function followers()
    {
        return $this->morphToMany(User::class, 'followable', 'follows')->withTimestamps();
    }
    // ユーザーのフォロワー数を取得する
    public function followersCount()
    {
        return $this->followers()->count();
    }

    // このユーザーがフォローしている人数を取得する
    public function followingsCount()
    {
        return $this->followings()->count();
    }
}
