erDiagram
    users ||--o{ follows : follows
    teams ||--o{ follows : follows
    users {
        bigint id PK "The primary key"
        string name "User's name"
        string email "User's email"
    }
    teams {
        bigint id PK "The primary key"
        string name "Team's name"
        text description "Team's description"
    }
    follows {
        bigint user_id FK "The user who is following"
        bigint followable_id "ID of the entity (user/team) being followed"
        string followable_type "Type of the entity being followed"
    }
